Fixed the Loader being not centered

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,13 @@ html, body {
 }
 
 
+
 .rendered-content h3 {
+  @apply text-3xl font-bold text-white mb-4 text-center;
+}
+
+
+.rendered-content h1,h2,h3 {
   @apply text-3xl font-bold text-white mb-4 text-center;
 }
 
